@@ -27,3 +27,4 @@ CPS internal features:
 - tests the new mtool.canMemberChangeLocalRoles() API
 - change the checkPerms within the local roles management skins and
 use the new mtool API canMemberChangeLocalRoles()
+- API : mtool.getFullnameFromId()
